# finnigan-parser

./: .gitignore  CMakeLists.txt  README.md
doc/: finnigan.pu
include/: msfinnigan.hpp
include/msfinnigan/: Element.hpp  Exception.hpp  Logger.hpp  Reader.hpp  constants.hpp  names.hpp  strfct.hpp
src/: AuditTag.hpp  CString.hpp  Element.cpp  Element.hpp  Exception.hpp  Factory.cpp  Factory.hpp  Field.cpp  Field.hpp  FinniganFileReader.hpp  FinniganFileReaderFactory.cpp  FinniganFileReaderFactory.hpp  Float.hpp  Header.cpp  Header.hpp  InfoPreamble.cpp  InfoPreamble.cpp~  InfoPreamble.hpp  InjectionData.cpp  InjectionData.hpp  Integer.hpp  IntegerArray.hpp  Logger.cpp  Logger.hpp  Observer.hpp  PString.hpp  RawFileInfo.hpp  Reader.cpp  Reader.hpp  Reader66.cpp  Reader66.hpp  RunHeader.cpp  RunHeader.hpp  RunHeaderAddr.cpp  RunHeaderAddr.cpp~  RunHeaderAddr.hpp  SequencerRow.cpp  SequencerRow.hpp  common.cpp  common.hpp  (+5 more)
src/lib/: AuditTag.cpp  CString.hpp  Element.cpp  Header.cpp  InfoPreamble.cpp  InjectionData.cpp  InjectionData.hpp  Integer.hpp  IntegerArray.hpp  Logger.cpp  PString.hpp  RawFileInfo.cpp  RawFileInfo.hpp  Reader.cpp  RunHeader.cpp  RunHeader.hpp  RunHeaderAddr.cpp  RunHeaderAddr.hpp  SequencerRow.cpp  SequencerRow.hpp
src/parser/: parser.cpp
test/: test-finnigan.cpp
test/res/: 20150320_N1105_G49_POS_549.raw  20150403_G46_N1060_NEG_Test.raw  wrong_magic_number.raw  wrong_signature.raw
